--- a/src/Screens/dashboard.module.css
+++ b/src/Screens/dashboard.module.css
@@ -1,13 +1,54 @@
 .main {
     display: flex;
     position: relative;
+    font-family: Manrope, sans-serif;
 }
 
 .dashboard {
     height: 150vh;
-    width: 100vw;
 }
 
-.font {
-    font-family: Manrope, sans-serif;
+.banner {
+    margin-top: 65px;
+    margin-left: -110px;
+    animation: fadeIn ease 6s forwards;
+}
+
+.bannerText {
+    font-size: 35px;
+    color: #000000;
+    text-align: center;
+    width: 400px;
+    position: absolute;
+    letter-spacing: 0.05em;
+    top: 190px;
+    left: 45%;
+    opacity: 0;
+    animation: fadeIn ease 7s forwards;
+}
+
+@keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+
+.bannerText span {
+    font-weight: 700;
+}
+
+.title {
+    flex-direction: row;
+    display: flex;
+}
+
+.titleIcon {
+    color: #363636;
+    width: 12px;
+    height: 10px;
+}
+
+.titleText {
+    font-size: 18px;
+    color: #363636;
+    margin-left: 12px;
 }
