--- a/src/Screens/your-courses.module.css
+++ b/src/Screens/your-courses.module.css
@@ -24,7 +24,7 @@
     position: absolute;
     letter-spacing: 0.05em;
     top: 190px;
-    left: 25%;
+    left: 15vw;
     opacity: 0;
     animation: fadeIn ease 7s forwards;
 }
