--- a/src/Screens/creator.module.css
+++ b/src/Screens/creator.module.css
@@ -7,3 +7,249 @@
 .creator {
     position: relative;
 }
+
+.creatorContainer {
+    width: 99vw;
+    margin-left: -17vw;
+    margin-top: 140px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.pic {
+    height: 106px;
+    width: 106px;
+    margin-left: calc(17vw + 45px);
+    margin-top: 43px;
+    margin-right: 25px;
+}
+
+.link {
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 35px;
+    color: #000000;
+    margin-top: 4px;
+}
+
+.tag {
+    margin-top: 20px;
+    background-color: #fff;
+    border-radius: 11px;
+    width: 86px;
+    height: 23px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    filter: drop-shadow(2px 2px 10px rgba(0, 0, 0, 0.25));
+}
+
+.cube {
+    color: #D2C2FF;
+    height: 17px;
+    width: 16px;
+}
+
+.tagText {
+    font-weight: 700;
+    font-size: 12px;
+    color: #7544FF;
+    margin-bottom: 3px;
+    margin-left: 6px;
+}
+
+.live {
+    width: 66px;
+    height: 23px;
+    background-color: #FF4F4F;
+    color: #fff;
+    border-radius: 4px;
+    text-transform: uppercase;
+    font-size: 12px;
+    letter-spacing: 0.08em;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+.subscribe {
+    margin-right: 32px;
+    width: 173px;
+    height: 42px;
+    background: #858585;
+    box-shadow: 0 10px 12px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    flex-direction: row;
+    display: flex;
+    color: #fff;
+    font-weight: 700;
+    font-size: 18px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 80px;
+    cursor: pointer;
+}
+
+.heart {
+    color: #fff;
+    width: 14px;
+    height: 13px;
+    margin-right: 12px;
+    margin-bottom: 14px;
+    margin-left: -10px;
+}
+
+.bio {
+    margin-left: 176px;
+    font-size: 18px;
+    line-height: 25px;
+    color: #363636;
+    width: 574px;
+    margin-top: 25px;
+}
+
+.titleText {
+    font-size: 18px;
+    color: #363636;
+    margin-left: 12px;
+}
+
+.title {
+    flex-direction: row;
+    display: flex;
+    margin-bottom: 22px;
+}
+
+.titleIcon {
+    color: #363636;
+    width: 15px;
+    height: 15px;
+}
+
+.videoContainer {
+    background: #FFFFFF;
+    box-shadow: 0 10px 12px rgba(0, 0, 0, 0.25);
+    border-radius: 3px 3px 10px 10px;
+    height: 709px;
+    width: 77vw;
+    margin-left: 46px;
+    position: relative;
+    overflow: hidden;
+}
+
+.thumbnail {
+    width: 77vw;
+    height: 540px;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.videoTitle {
+    font-weight: 700;
+    font-size: 30px;
+    color: #363636;
+    position: absolute;
+    left: 35px;
+    top: 578px;
+}
+
+.watchButton {
+    flex-direction: row;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 245px;
+    height: 61px;
+    background-color: #7544FF;
+    border-radius: 43px;
+    font-weight: 700;
+    font-size: 18px;
+    color: #FFFFFF;
+    position: absolute;
+    top: 256px;
+    left: 40%;
+    text-decoration: none;
+}
+
+.newWindow {
+    color: #FFFFFF;
+    height: 27px;
+    width: 27px;
+    margin-right: 15px;
+}
+
+.live2 {
+    width: 66px;
+    height: 23px;
+    background-color: #FF4F4F;
+    color: #fff;
+    border-radius: 4px;
+    position: absolute;
+    top: 637px;
+    left: 38px;
+    text-transform: uppercase;
+    font-size: 12px;
+    letter-spacing: 0.08em;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.tag2 {
+    background-color: #F0F0F0;
+    border-radius: 11px;
+    width: 86px;
+    height: 23px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    filter: drop-shadow(2px 2px 10px rgba(0, 0, 0, 0.25));
+    position: absolute;
+    top: 637px;
+    left: 124px;
+}
+
+.eye {
+    width: 43px;
+    height: 32px;
+    color: #363636;
+    position: absolute;
+    right: 262px;
+    top: 587px;
+}
+
+.viewers {
+    font-size: 18px;
+    line-height: 25px;
+    color: #000000;
+    position: absolute;
+    right: 155px;
+    top: 590px;
+}
+
+.clock {
+    width: 29px;
+    height: 29px;
+    color: #363636;
+    position: absolute;
+    right: 109px;
+    top: 588px;
+}
+
+.duration {
+    font-size: 18px;
+    line-height: 25px;
+    color: #000000;
+    position: absolute;
+    right: 35px;
+    top: 590px;
+}
