--- a/src/Screens/creator.module.css
+++ b/src/Screens/creator.module.css
@@ -6,6 +6,14 @@
 
 .creator {
     position: relative;
+    padding-bottom: 130px;
+}
+
+.blob {
+    position: absolute;
+    left: -300px;
+    top: 100px;
+    pointer-events: none;
 }
 
 .creatorContainer {
@@ -252,4 +260,10 @@
     position: absolute;
     right: 35px;
     top: 590px;
+}
+
+.liveCourses {
+    margin-left: 53px;
+    display: flex;
+    flex-direction: row;
 }
