--- a/src/Screens/player.module.css
+++ b/src/Screens/player.module.css
@@ -27,7 +27,7 @@
 .creatorContainer {
     position: absolute;
     bottom: 0;
-    width: 82vw;
+    width: 100vw;
     height: 150px;
     background-color: #fff;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
@@ -52,6 +52,13 @@
     letter-spacing: 0.1em;
     text-transform: uppercase;
     color: #CECECE;
+}
+
+.verify {
+    position: absolute;
+    left: 172px;
+    height: 12px;
+    width: 12px;
 }
 
 .link {
@@ -90,7 +97,7 @@
 }
 
 .subscribe {
-    margin-right: 32px;
+    margin-right: 300px;
     width: 173px;
     height: 42px;
     background: #858585;
